--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb://127.0.0.1:27017/final
-APPLICATION_URL=http://localhost:5173
+MONGO_URI=mongodb+srv://princevasanth754:2608@buynext.8yolwz5.mongodb.net/?retryWrites=true&w=majority&appName=buynext
