--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb+srv://princevasanth754:2608@buynext.8yolwz5.mongodb.net/?retryWrites=true&w=majority&appName=buynext
+MONGO_URI=mongodb+srv://princevasanth:iQ3Qf2oKkyHZELQw@buynextfinal.sbxihge.mongodb.net/final?retryWrites=true&w=majority&appName=buynextfinal
