--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -7,10 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
+
+# Build directories
 dist
 dist-ssr
 *.local
+
+# Environment variables
+.env
 
 # Editor directories and files
 .vscode/*
