--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^1.12.2",
     "firebase": "^12.3.0",
-    "framer-motion": "^12.23.19",
+    "framer-motion": "^12.23.26",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
